--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4839,6 +4839,16 @@ repositories:
       url: https://github.com/ros-visualization/python_qt_binding.git
       version: jazzy
     status: maintained
+  qml_ros2_plugin:
+    doc:
+      type: git
+      url: https://github.com/StefanFabian/qml_ros2_plugin.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/StefanFabian/qml_ros2_plugin.git
+      version: master
+    status: maintained
   qpoases_vendor:
     release:
       tags:
