Apply suggestions from code review
Co-authored-by: Scott K Logan <logans@cottsay.net>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6494,11 +6494,10 @@ python3-hypothesis:
   gentoo: [dev-python/hypothesis]
   ubuntu: [python3-hypothesis]
 python3-icecream:
-  debian:
-    bookworm: [python3-icecream]
+  debian: [python3-icecream]
   ubuntu:
-    jammy: [python3-icecream]
-    noble: [python3-icecream]
+    '*': [python3-icecream]
+    focal: null
 python3-ifcfg:
   debian:
     buster: [python3-ifcfg]
