Add `python3-icecream` as a python dependency (#41432)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6493,6 +6493,11 @@ python3-hypothesis:
   fedora: [python3-hypothesis]
   gentoo: [dev-python/hypothesis]
   ubuntu: [python3-hypothesis]
+python3-icecream:
+  debian: [python3-icecream]
+  ubuntu:
+    '*': [python3-icecream]
+    focal: null
 python3-ifcfg:
   debian:
     buster: [python3-ifcfg]
