Add libvorbis-dev to base.yaml

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6270,6 +6270,12 @@ libvlccore-dev:
   fedora: [vlc-devel]
   opensuse: [vlc-devel]
   ubuntu: [libvlccore-dev]
+libvorbis-dev:
+  debian: [libvorbis-dev]
+  fedora: [libvorbis-devel]
+  nixos: [libvorbis]
+  opensuse: [libvorbis-dev]
+  ubuntu: [libvorbis-dev]
 libvpx-dev:
   debian: [libvpx-dev]
   fedora: [libvpx-devel]
