add arch source for libvorbis base.yaml

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6271,6 +6271,7 @@ libvlccore-dev:
   opensuse: [vlc-devel]
   ubuntu: [libvlccore-dev]
 libvorbis-dev:
+  arch: [libvorbis]
   debian: [libvorbis-dev]
   fedora: [libvorbis-devel]
   nixos: [libvorbis]
