fix issues with repos

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6271,11 +6271,10 @@ libvlccore-dev:
   opensuse: [vlc-devel]
   ubuntu: [libvlccore-dev]
 libvorbis-dev:
-  arch: [libvorbis]
+  alpine: [libvorbis-dev]
   debian: [libvorbis-dev]
   fedora: [libvorbis-devel]
-  nixos: [libvorbis]
-  opensuse: [libvorbis-dev]
+  rhel: [libvorbis-devel]
   ubuntu: [libvorbis-dev]
 libvpx-dev:
   debian: [libvpx-dev]
