Add netft_utils source for Iron

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4035,6 +4035,12 @@ repositories:
       url: https://github.com/nerian-vision/nerian_stereo_ros2.git
       version: default
     status: developed
+  netft_utils:
+    source:
+      type: git
+      url: https://github.com/tamu-edu/rad_lab_netft_utils.git
+      version: iron
+    status: maintained
   nlohmann_json_schema_validator_vendor:
     doc:
       type: git
