--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6274,6 +6274,7 @@ libvorbis-dev:
   alpine: [libvorbis-dev]
   debian: [libvorbis-dev]
   fedora: [libvorbis-devel]
+  opensuse: [libvorbis-devel]
   rhel: [libvorbis-devel]
   ubuntu: [libvorbis-dev]
 libvpx-dev:
