added flex_sync to humble/iron/jazzy/rolling

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2102,6 +2102,16 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: humble-devel
     status: maintained
+  flex_sync:
+    doc:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: humble
+    status: developed
   flexbe_app:
     doc:
       type: git
