--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1620,6 +1620,16 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: rolling-devel
     status: maintained
+  flex_sync:
+    doc:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: iron
+    source:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: iron
+    status: developed
   flexbe_behavior_engine:
     doc:
       type: git
