--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1670,6 +1670,16 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: rolling-devel
     status: maintained
+  flex_sync:
+    doc:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: jazzy
+    status: developed
   flexbe_behavior_engine:
     doc:
       type: git
