--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1622,6 +1622,16 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: rolling-devel
     status: maintained
+  flex_sync:
+    doc:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: rolling
+    source:
+      type: git
+      url: https://github.com/ros-misc-utilities/flex_sync.git
+      version: rolling
+    status: developed
   flexbe_behavior_engine:
     doc:
       type: git
