Set clang-format key to clang-tools-extra on RHEL
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -558,7 +558,7 @@ clang-format:
   osx:
     homebrew:
       packages: [clang-format]
-  rhel: [clang]
+  rhel: [clang-tools-extra]
   ubuntu: [clang-format]
 clang-tidy:
   alpine: [clang-extra-tools]
