Skip clang-format for RHEL 7
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -558,7 +558,9 @@ clang-format:
   osx:
     homebrew:
       packages: [clang-format]
-  rhel: [clang-tools-extra]
+  rhel:
+    '*': [clang-tools-extra]
+    '7': null
   ubuntu: [clang-format]
 clang-tidy:
   alpine: [clang-extra-tools]
