Set clang-format to clang-tools-extra for Fedora too
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -552,7 +552,7 @@ clang-format:
   alpine: [clang]
   arch: [clang]
   debian: [clang-format]
-  fedora: [clang]
+  fedora: [clang-tools-extra]
   gentoo: [sys-devel/clang]
   nixos: [clang]
   osx:
