Add git-clang-format to Fedora and RHEL for clang-format
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -552,14 +552,14 @@ clang-format:
   alpine: [clang]
   arch: [clang]
   debian: [clang-format]
-  fedora: [clang-tools-extra]
+  fedora: [clang-tools-extra, git-clang-format]
   gentoo: [sys-devel/clang]
   nixos: [clang]
   osx:
     homebrew:
       packages: [clang-format]
   rhel:
-    '*': [clang-tools-extra]
+    '*': [clang-tools-extra, git-clang-format]
     '7': null
   ubuntu: [clang-format]
 clang-tidy:
