Set clang-format key to clang-tools-extra on RHEL and Fedora (#41591)
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -552,13 +552,15 @@ clang-format:
   alpine: [clang]
   arch: [clang]
   debian: [clang-format]
-  fedora: [clang]
+  fedora: [clang-tools-extra, git-clang-format]
   gentoo: [sys-devel/clang]
   nixos: [clang]
   osx:
     homebrew:
       packages: [clang-format]
-  rhel: [clang]
+  rhel:
+    '*': [clang-tools-extra, git-clang-format]
+    '7': null
   ubuntu: [clang-format]
 clang-tidy:
   alpine: [clang-extra-tools]
