Add graph_reasoning to rosdistro (#40804)
* Add graph_reasoning to rosdistro

* Rename graph_reasoning->situational_graphs_reasoning

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7221,6 +7221,12 @@ repositories:
       url: https://github.com/snt-arg/situational_graphs_msgs.git
       version: main
     status: maintained
+  situational_graphs_reasoning:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning.git
+      version: develop
+    status: maintained
   situational_graphs_reasoning_msgs:
     source:
       type: git
