Add graph_wrapper to rosdistro (#40806)
* Add graph_wrapper to rosdistro

* Rename graph_wrapper->situational_graphs_wrapper

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8759,6 +8759,12 @@ repositories:
       url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
       version: main
     status: maintained
+  situational_graphs_wrapper:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_wrapper.git
+      version: develop
+    status: maintained
   slam_toolbox:
     doc:
       type: git
