--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3706,6 +3706,12 @@ repositories:
       url: https://github.com/ros2/libyaml_vendor.git
       version: humble
     status: maintained
+  lidar_situational_graphs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/lidar_situational_graphs.git
+      version: feature/ros2
+    status: maintained
   lms1xx:
     doc:
       type: git
