--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -2975,6 +2975,12 @@ repositories:
       url: https://github.com/ros2/libyaml_vendor.git
       version: iron
     status: maintained
+  lidar_situational_graphs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/lidar_situational_graphs.git
+      version: feature/ros2
+    status: maintained
   locator_ros_bridge:
     doc:
       type: git
