Adding slg_msgs and laser_segmentation (#41504)
* Adding slg_msgs and laser_segmentation

Signed-off-by: Alberto Tudela <ajtudela@gmail.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3395,6 +3395,10 @@ repositories:
       type: git
       url: https://github.com/ajtudela/laser_segmentation.git
       version: humble
+    source:
+      type: git
+      url: https://github.com/ajtudela/laser_segmentation.git
+      version: humble
     status: maintained
   launch:
     doc:
@@ -8789,6 +8793,10 @@ repositories:
     status: maintained
   slg_msgs:
     doc:
+      type: git
+      url: https://github.com/ajtudela/slg_msgs.git
+      version: humble
+    source:
       type: git
       url: https://github.com/ajtudela/slg_msgs.git
       version: humble
