--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2812,6 +2812,16 @@ repositories:
       url: https://github.com/ros-perception/laser_proc.git
       version: ros2-devel
     status: maintained
+  laser_segmentation:
+    doc:
+      type: git
+      url: https://github.com/ajtudela/laser_segmentation.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/ajtudela/laser_segmentation.git
+      version: main
+    status: maintained
   launch:
     doc:
       type: git
@@ -7075,6 +7085,16 @@ repositories:
       type: git
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
+    status: maintained
+  slg_msgs:
+    doc:
+      type: git
+      url: https://github.com/ajtudela/slg_msgs.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/ajtudela/slg_msgs.git
+      version: main
     status: maintained
   slider_publisher:
     doc:
