Add libvorbis-dev to base.yaml (#41577)
* Add libvorbis-dev to base.yaml

* add arch source for libvorbis base.yaml

* fix issues with repos

* add opensuse

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6272,6 +6272,13 @@ libvlccore-dev:
   fedora: [vlc-devel]
   opensuse: [vlc-devel]
   ubuntu: [libvlccore-dev]
+libvorbis-dev:
+  alpine: [libvorbis-dev]
+  debian: [libvorbis-dev]
+  fedora: [libvorbis-devel]
+  opensuse: [libvorbis-devel]
+  rhel: [libvorbis-devel]
+  ubuntu: [libvorbis-dev]
 libvpx-dev:
   debian: [libvpx-dev]
   fedora: [libvpx-devel]
