Added network_bridge to jazzy (#41576)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -3897,6 +3897,16 @@ repositories:
       url: https://github.com/neobotix/neo_simulation2.git
       version: rolling
     status: maintained
+  network_bridge:
+    doc:
+      type: git
+      url: https://github.com/brow1633/network_bridge.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/brow1633/network_bridge.git
+      version: main
+    status: maintained
   nlohmann_json_schema_validator_vendor:
     doc:
       type: git
