Rename rosdep key libflatbuffers to libflatbuffers-dev
Also more consistently use header packages from other package managers.

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3456,16 +3456,16 @@ libflann-dev:
   openembedded: [libflann@meta-ros-common]
   rhel: [flann-devel]
   ubuntu: [libflann-dev]
-libflatbuffers:
-  alpine: [flatbuffers]
+libflatbuffers-dev:
+  alpine: [flatbuffers-dev]
   arch: [flatbuffers]
   debian: [libflatbuffers-dev]
-  fedora: [flatbuffers]
+  fedora: [flatbuffers-devel]
   freebsd: [flatbuffers]
   gentoo: [dev-libs/flatbuffers]
   nixos: [flatbuffers]
   opensuse:
-    '*': [flatbuffers]
+    '*': [flatbuffers-devel]
     '15.2': null
     '15.3': null
   osx:
@@ -3474,7 +3474,7 @@ libflatbuffers:
     macports:
       packages: [flatbuffers]
   rhel:
-    '*': [flatbuffers]
+    '*': [flatbuffers-devel]
     '8': null
   ubuntu: [libflatbuffers-dev]
 libfltk-dev:
