--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6843,10 +6843,7 @@ matio:
   fedora: [matio-devel]
   gentoo: [sci-libs/matio]
   nixos: [matio]
-  rhel:
-    '*': null
-    '8': [matio-devel]
-    '9': [matio-devel]
+  rhel: [matio-devel]
   ubuntu: [libmatio-dev]
 maven:
   alpine: [maven]
