--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -678,7 +678,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_msgs.git
-      version: rolling
+      version: main
     status: developed
   autoware_utils:
     release:
