--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -573,7 +573,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_msgs.git
-      version: rolling
+      version: main
     status: developed
   autoware_utils:
     release:
