--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -583,7 +583,7 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_msgs.git
-      version: rolling
+      version: main
     status: developed
   autoware_utils:
     release:
