Add libflatbuffers to rosdep/base.yaml (#41519)
* Add libflatbuffers to rosdep/base.yaml

* Rename rosdep key libflatbuffers to libflatbuffers-dev

Also more consistently use header packages from other package managers.

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3458,6 +3458,27 @@ libflann-dev:
   openembedded: [libflann@meta-ros-common]
   rhel: [flann-devel]
   ubuntu: [libflann-dev]
+libflatbuffers-dev:
+  alpine: [flatbuffers-dev]
+  arch: [flatbuffers]
+  debian: [libflatbuffers-dev]
+  fedora: [flatbuffers-devel]
+  freebsd: [flatbuffers]
+  gentoo: [dev-libs/flatbuffers]
+  nixos: [flatbuffers]
+  opensuse:
+    '*': [flatbuffers-devel]
+    '15.2': null
+    '15.3': null
+  osx:
+    homebrew:
+      packages: [flatbuffers]
+    macports:
+      packages: [flatbuffers]
+  rhel:
+    '*': [flatbuffers-devel]
+    '8': null
+  ubuntu: [libflatbuffers-dev]
 libfltk-dev:
   arch: [fltk]
   debian:
