Add matio-devel for RHEL 9 (#41550)
* Add matio-devel for RHEL 9

Cf. https://rhel.pkgs.org/9/epel-x86_64/matio-devel-1.5.27-1.el9.x86_64.rpm.html

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6873,9 +6873,7 @@ matio:
   fedora: [matio-devel]
   gentoo: [sci-libs/matio]
   nixos: [matio]
-  rhel:
-    '*': null
-    '8': [matio-devel]
+  rhel: [matio-devel]
   ubuntu: [libmatio-dev]
 maven:
   alpine: [maven]
