--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1247,7 +1247,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/stonier/ecl_core.git
-      version: devel
+      version: release/1.2.x
     status: maintained
   ecl_lite:
     doc:
