Modify netft_utils to point to upstream

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4038,7 +4038,7 @@ repositories:
   netft_utils:
     source:
       type: git
-      url: https://github.com/tamu-edu/rad_lab_netft_utils.git
+      url: https://github.com/UTNuclearRoboticsPublic/netft_utils
       version: iron
     status: maintained
   nlohmann_json_schema_validator_vendor:
