--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4038,7 +4038,7 @@ repositories:
   netft_utils:
     source:
       type: git
-      url: https://github.com/UTNuclearRoboticsPublic/netft_utils
+      url: https://github.com/UTNuclearRoboticsPublic/netft_utils.git
       version: iron
     status: maintained
   nlohmann_json_schema_validator_vendor:
