--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9300,6 +9300,10 @@ python3-stonesoup-pip:
   ubuntu:
     pip:
       packages: [stonesoup]
+python3-streamlit-pip:
+  '*':
+    pip:
+      packages: [streamlit]
 python3-suas-interop-clients-pip:
   debian:
     pip:
