Use the iron branch in teleop twist joy
Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7628,7 +7628,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros2/teleop_twist_joy.git
-      version: rolling
+      version: iron
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -7638,7 +7638,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros2/teleop_twist_joy.git
-      version: rolling
+      version: iron
     status: maintained
   teleop_twist_keyboard:
     doc:
