--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4024,6 +4024,16 @@ repositories:
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
       version: jazzy
     status: developed
+  nicla_vision_ros2:
+    doc:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: jazzy
+    status: developed
   nmea_hardware_interface:
     doc:
       type: git
