--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4999,6 +4999,16 @@ repositories:
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
       version: humble
     status: developed
+  nicla_vision_ros2:
+    doc:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: humble
+    status: developed
   nmea_hardware_interface:
     doc:
       type: git
