Added python3-streamlit to rosdep (#41619)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9331,6 +9331,10 @@ python3-stonesoup-pip:
   ubuntu:
     pip:
       packages: [stonesoup]
+python3-streamlit-pip:
+  '*':
+    pip:
+      packages: [streamlit]
 python3-suas-interop-clients-pip:
   debian:
     pip:
