--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5538,6 +5538,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/rmf_traffic_editor-release.git
+      version: 1.9.1-1
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
