--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3527,6 +3527,7 @@ repositories:
       - moveit_ros_planning
       - moveit_ros_planning_interface
       - moveit_ros_robot_interaction
+      - moveit_ros_tests
       - moveit_ros_visualization
       - moveit_ros_warehouse
       - moveit_runtime
@@ -3543,7 +3544,7 @@ repositories:
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/moveit2-release.git
-      version: 2.9.0-2
+      version: 2.10.0-1
     source:
       test_commits: false
       test_pull_requests: false
