Update distribution.yaml: add rosx_introspection

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7985,6 +7985,16 @@ repositories:
       url: https://github.com/DFKI-NI/rospy_message_converter.git
       version: humble
     status: maintained
+  rosx_introspection:
+    doc:
+      type: git
+      url: https://github.com/facontidavide/rosx_introspection.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/facontidavide/rosx_introspection.git
+      version: main
+    status: developed
   rot_conv_lib:
     release:
       packages:
