added gentoo for python3-dill

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5562,6 +5562,7 @@ python3-dill:
   arch: [python-dill]
   debian: [python3-dill]
   fedora: [python-dill]
+  gentoo: [dev-python/dill]
   opensuse: [python-dill]
   ubuntu: [python3-dill]
 python3-distro:
