--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7552,6 +7552,13 @@ python3-openhsi-pip:
   ubuntu:
     pip:
       packages: [openhsi]
+python3-openpyxl-pip:
+  debian:
+    pip:
+      packages: [openpyxl]
+  ubuntu:
+    pip:
+      packages: [openpyxl]
 python3-opentelemetry-api-pip:
   '*':
     pip:
