Add python3-dill to rosdep/python.yaml  (#41663)
* added python-dill

* added gentoo for python3-dill

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5557,6 +5557,14 @@ python3-dev:
   opensuse: [python3-devel]
   rhel: ['python%{python3_pkgversion}-devel']
   ubuntu: [python3-dev]
+python3-dill:
+  alpine: [py3-dill]
+  arch: [python-dill]
+  debian: [python3-dill]
+  fedora: [python-dill]
+  gentoo: [dev-python/dill]
+  opensuse: [python-dill]
+  ubuntu: [python3-dill]
 python3-distro:
   debian: [python3-distro]
   fedora: [python3-distro]
