--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -3584,6 +3584,7 @@ repositories:
       - moveit_ros_planning
       - moveit_ros_planning_interface
       - moveit_ros_robot_interaction
+      - moveit_ros_tests
       - moveit_ros_visualization
       - moveit_ros_warehouse
       - moveit_runtime
@@ -3600,7 +3601,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/moveit2-release.git
-      version: 2.9.0-1
+      version: 2.10.0-1
     source:
       test_commits: false
       test_pull_requests: false
