turn off testing for now

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5313,7 +5313,7 @@ repositories:
       url: https://github.com/IntelRealSense/realsense-ros-release.git
       version: 4.55.1-2
     source:
-      test_pull_requests: true
+      test_pull_requests: false
       type: git
       url: https://github.com/IntelRealSense/realsense-ros.git
       version: ros2-development
