Update rmf source and doc versions to jazzy
Signed-off-by: Yadunund <yadunund@intrinsic.ai>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -153,7 +153,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/ament_cmake_catch2.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -162,7 +162,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/ament_cmake_catch2.git
-      version: main
+      version: jazzy
     status: developed
   ament_cmake_ros:
     doc:
@@ -3313,7 +3313,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/menge_vendor.git
-      version: master
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -3322,7 +3322,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/menge_vendor.git
-      version: master
+      version: jazzy
     status: developed
   message_filters:
     doc:
@@ -3915,7 +3915,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -3924,7 +3924,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
-      version: main
+      version: jazzy
     status: developed
   nmea_hardware_interface:
     doc:
@@ -5351,7 +5351,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_api_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5360,13 +5360,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_api_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmf_battery:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_battery.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5375,13 +5375,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_battery.git
-      version: main
+      version: jazzy
     status: developed
   rmf_building_map_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_building_map_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5390,13 +5390,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_building_map_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmf_cmake_uncrustify:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_cmake_uncrustify.git
-      version: rolling
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5405,23 +5405,23 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_cmake_uncrustify.git
-      version: rolling
+      version: jazzy
     status: developed
   rmf_demos:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_demos.git
-      version: main
+      version: jazzy
     source:
       type: git
       url: https://github.com/open-rmf/rmf_demos.git
-      version: main
+      version: jazzy
     status: developed
   rmf_internal_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_internal_msgs.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_charger_msgs
@@ -5443,13 +5443,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_internal_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmf_ros2:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_ros2.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_charging_schedule
@@ -5465,13 +5465,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_ros2.git
-      version: main
+      version: jazzy
     status: developed
   rmf_simulation:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_simulation.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_building_sim_gz_plugins
@@ -5484,13 +5484,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_simulation.git
-      version: main
+      version: jazzy
     status: developed
   rmf_task:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_task.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_task
@@ -5502,13 +5502,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_task.git
-      version: main
+      version: jazzy
     status: developed
   rmf_traffic:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_traffic.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_traffic
@@ -5520,13 +5520,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic.git
-      version: main
+      version: jazzy
     status: developed
   rmf_traffic_editor:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_building_map_tools
@@ -5539,13 +5539,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
-      version: main
+      version: jazzy
     status: developed
   rmf_utils:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_utils.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5554,13 +5554,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_utils.git
-      version: main
+      version: jazzy
     status: developed
   rmf_variants:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_variants.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_dev
@@ -5571,13 +5571,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_variants.git
-      version: main
+      version: jazzy
     status: developed
   rmf_visualization:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_visualization.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_visualization
@@ -5595,13 +5595,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_visualization.git
-      version: main
+      version: jazzy
     status: developed
   rmf_visualization_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_visualization_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5610,7 +5610,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_visualization_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmw:
     doc:
