Update rmf_variants to 0.1.0-1 on jazzy (#41733)
Signed-off-by: Yadunund <yadunund@intrinsic.ai>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5604,11 +5604,11 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/rmf_variants-release.git
-      version: 0.0.1-3
+      version: 0.1.0-1
     source:
       type: git
       url: https://github.com/open-rmf/rmf_variants.git
-      version: main
+      version: jazzy
     status: developed
   rmf_visualization:
     doc:
