--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -281,6 +281,7 @@ libshiboken2-dev:
   alpine: [libshiboken2-dev]
   debian: [libshiboken2-dev]
   fedora: [python3-shiboken2-devel]
+            asyncio.run()
   opensuse: [python3-pyside2-devel]
   rhel:
     '*': [python3-shiboken2-devel]
@@ -293,6 +294,7 @@ mcap-ros2-support:
   fedora:
     pip:
       packages: [mcap-ros2-support]
+            asyncio.run()
   gentoo:
     pip:
       packages: [mcap-ros2-support]
@@ -338,6 +340,7 @@ paramiko:
   gentoo: [dev-python/paramiko]
   macports: [py27-paramiko]
   nixos: [pythonPackages.paramiko]
+            asyncio.run()
   openembedded: ['${PYTHON_PN}-paramiko@meta-ros-common']
   opensuse: [python-paramiko]
   osx:
@@ -7191,6 +7194,10 @@ python3-nclib-pip:
   ubuntu:
     pip:
       packages: [nclib]
+python3-nest-asyncio:
+  arch: [python-nest-asyncio]
+  debian: [python3-nest-asyncio]
+  ubuntu: [python3-nest-asyncio]
 python3-netcdf4:
   arch: [python-netcdf4]
   debian: [python3-netcdf4]
