Added more OS entires for nest-asyncio. Removed accidental pastes.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -281,7 +281,6 @@ libshiboken2-dev:
   alpine: [libshiboken2-dev]
   debian: [libshiboken2-dev]
   fedora: [python3-shiboken2-devel]
-            asyncio.run()
   opensuse: [python3-pyside2-devel]
   rhel:
     '*': [python3-shiboken2-devel]
@@ -294,7 +293,6 @@ mcap-ros2-support:
   fedora:
     pip:
       packages: [mcap-ros2-support]
-            asyncio.run()
   gentoo:
     pip:
       packages: [mcap-ros2-support]
@@ -340,7 +338,6 @@ paramiko:
   gentoo: [dev-python/paramiko]
   macports: [py27-paramiko]
   nixos: [pythonPackages.paramiko]
-            asyncio.run()
   openembedded: ['${PYTHON_PN}-paramiko@meta-ros-common']
   opensuse: [python-paramiko]
   osx:
@@ -7195,8 +7192,14 @@ python3-nclib-pip:
     pip:
       packages: [nclib]
 python3-nest-asyncio:
+  alpine: [py3-nest_asyncio]
   arch: [python-nest-asyncio]
   debian: [python3-nest-asyncio]
+  fedora: [python3-nest-asyncio]
+  gentoo: [dev-python/nest-asyncio]
+  nixos: [python312Packages.nest-asyncio]
+  opensuse: [python-nest-asyncio]
+  rhel: [python3-nest-asyncio]
   ubuntu: [python3-nest-asyncio]
 python3-netcdf4:
   arch: [python-netcdf4]
