add alive-progress pip dependencies to python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4884,6 +4884,10 @@ python3-alembic:
     '*': [python3-alembic]
     '7': null
   ubuntu: [python3-alembic]
+python3-alive-progress-pip:
+  '*':
+    pip:
+      packages: [alive-progress]
 python3-ansible-runner-pip:
   debian:
     pip:
