Update rmf source and doc versions to jazzy (#41735)
---------

Signed-off-by: Yadunund <yadunund@intrinsic.ai>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -153,7 +153,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/ament_cmake_catch2.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -162,7 +162,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/ament_cmake_catch2.git
-      version: main
+      version: jazzy
     status: developed
   ament_cmake_ros:
     doc:
@@ -3328,7 +3328,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/menge_vendor.git
-      version: master
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -3337,7 +3337,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/menge_vendor.git
-      version: master
+      version: jazzy
     status: developed
   message_filters:
     doc:
@@ -3931,7 +3931,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -3940,7 +3940,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/nlohmann_json_schema_validator_vendor.git
-      version: main
+      version: jazzy
     status: developed
   nmea_hardware_interface:
     doc:
@@ -5387,7 +5387,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_api_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5402,7 +5402,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_battery.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5411,13 +5411,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_battery.git
-      version: main
+      version: jazzy
     status: developed
   rmf_building_map_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_building_map_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5426,38 +5426,23 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_building_map_msgs.git
-      version: main
-    status: developed
-  rmf_cmake_uncrustify:
-    doc:
-      type: git
-      url: https://github.com/open-rmf/rmf_cmake_uncrustify.git
-      version: rolling
-    release:
-      tags:
-        release: release/jazzy/{package}/{version}
-      url: https://github.com/ros2-gbp/rmf_cmake_uncrustify-release.git
-      version: 1.2.0-6
-    source:
-      type: git
-      url: https://github.com/open-rmf/rmf_cmake_uncrustify.git
-      version: rolling
+      version: jazzy
     status: developed
   rmf_demos:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_demos.git
-      version: main
+      version: jazzy
     source:
       type: git
       url: https://github.com/open-rmf/rmf_demos.git
-      version: main
+      version: jazzy
     status: developed
   rmf_internal_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_internal_msgs.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_charger_msgs
@@ -5479,13 +5464,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_internal_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmf_ros2:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_ros2.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_charging_schedule
@@ -5501,13 +5486,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_ros2.git
-      version: main
+      version: jazzy
     status: developed
   rmf_simulation:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_simulation.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_building_sim_gz_plugins
@@ -5520,13 +5505,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_simulation.git
-      version: main
+      version: jazzy
     status: developed
   rmf_task:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_task.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_task
@@ -5544,7 +5529,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_traffic.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_traffic
@@ -5556,13 +5541,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic.git
-      version: main
+      version: jazzy
     status: developed
   rmf_traffic_editor:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_building_map_tools
@@ -5576,13 +5561,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_traffic_editor.git
-      version: main
+      version: jazzy
     status: developed
   rmf_utils:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_utils.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5591,13 +5576,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_utils.git
-      version: main
+      version: jazzy
     status: developed
   rmf_variants:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_variants.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_dev
@@ -5614,7 +5599,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_visualization.git
-      version: main
+      version: jazzy
     release:
       packages:
       - rmf_visualization
@@ -5632,13 +5617,13 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_visualization.git
-      version: main
+      version: jazzy
     status: developed
   rmf_visualization_msgs:
     doc:
       type: git
       url: https://github.com/open-rmf/rmf_visualization_msgs.git
-      version: main
+      version: jazzy
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -5647,7 +5632,7 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/rmf_visualization_msgs.git
-      version: main
+      version: jazzy
     status: developed
   rmw:
     doc:
