--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7989,7 +7989,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/facontidavide/rosx_introspection.git
-      version: main
+      version: master
     source:
       type: git
       url: https://github.com/facontidavide/rosx_introspection.git
