--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7993,7 +7993,7 @@ repositories:
     source:
       type: git
       url: https://github.com/facontidavide/rosx_introspection.git
-      version: main
+      version: master
     status: developed
   rot_conv_lib:
     release:
