--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5302,7 +5302,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/IntelRealSense/realsense-ros.git
-      version: ros2-development
+      version: ros2-master
     release:
       packages:
       - realsense2_camera
@@ -5316,7 +5316,7 @@ repositories:
       test_pull_requests: false
       type: git
       url: https://github.com/IntelRealSense/realsense-ros.git
-      version: ros2-development
+      version: ros2-master
     status: developed
   realtime_support:
     doc:
