--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6183,6 +6183,11 @@ repositories:
       version: master
     status_description: Maintained in source form only since no ROS 1 packages available
       in Rolling
+  rosboard:
+    doc:
+      type: git
+      url: https://github.com/dheera/rosboard
+      version: v1.3.0
   rosbridge_suite:
     doc:
       type: git
