Update distribution.yaml: add rosx_introspection (#41657)
* Update distribution.yaml: add rosx_introspection

* Update humble/distribution.yaml

* Update humble/distribution.yaml

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7984,6 +7984,16 @@ repositories:
       url: https://github.com/DFKI-NI/rospy_message_converter.git
       version: humble
     status: maintained
+  rosx_introspection:
+    doc:
+      type: git
+      url: https://github.com/facontidavide/rosx_introspection.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/facontidavide/rosx_introspection.git
+      version: master
+    status: developed
   rot_conv_lib:
     release:
       packages:
