Removed python3-nest-asyncio for old linux distros.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7198,9 +7198,15 @@ python3-nest-asyncio:
   fedora: [python3-nest-asyncio]
   gentoo: [dev-python/nest-asyncio]
   nixos: [python312Packages.nest-asyncio]
-  opensuse: [python-nest-asyncio]
-  rhel: [python3-nest-asyncio]
-  ubuntu: [python3-nest-asyncio]
+  opensuse: 
+    '*': [python-nest-asyncio]
+    '15.2': null
+  rhel:
+    '*': [python3-nest-asyncio]
+    '8': null
+  ubuntu:
+    '*': [python3-nest-asyncio]
+    focal: null
 python3-netcdf4:
   arch: [python-netcdf4]
   debian: [python3-netcdf4]
