Make all libgrpc dependencies refer to header packages (#41602)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3838,21 +3838,21 @@ libgps:
   rhel: [gpsd-devel]
   ubuntu: [libgps-dev]
 libgrpc:
-  alpine: [grpc]
+  alpine: [grpc-dev]
   arch: [grpc]
   debian: [libgrpc++-dev]
-  fedora: [grpc-cpp]
+  fedora: [grpc-devel]
   gentoo: [net-libs/grpc]
   nixos: [grpc]
   openembedded: [grpc@meta-networking]
-  opensuse: [grpc]
+  opensuse: [grpc-devel]
   osx:
     homebrew:
       packages: [grpc]
     macports:
       packages: [grpc]
   rhel:
-    '*': [grpc]
+    '*': [grpc-devel]
     '8': null
   ubuntu: [libgrpc++-dev]
 libgsl:
