autoware_msgs: 1.1.0-1 in 'rolling/distribution.yaml' [bloom]

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -580,6 +580,21 @@ repositories:
       version: main
     status: developed
   autoware_msgs:
+    release:
+      packages:
+      - autoware_common_msgs
+      - autoware_control_msgs
+      - autoware_localization_msgs
+      - autoware_map_msgs
+      - autoware_perception_msgs
+      - autoware_planning_msgs
+      - autoware_sensing_msgs
+      - autoware_system_msgs
+      - autoware_vehicle_msgs
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/autoware_msgs-release.git
+      version: 1.1.0-1
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_msgs.git
