Add python3-nest-asyncio (#41741)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7195,6 +7195,22 @@ python3-nclib-pip:
   ubuntu:
     pip:
       packages: [nclib]
+python3-nest-asyncio:
+  alpine: [py3-nest_asyncio]
+  arch: [python-nest-asyncio]
+  debian: [python3-nest-asyncio]
+  fedora: [python3-nest-asyncio]
+  gentoo: [dev-python/nest-asyncio]
+  nixos: [python312Packages.nest-asyncio]
+  opensuse:
+    '*': [python-nest-asyncio]
+    '15.2': null
+  rhel:
+    '*': [python3-nest-asyncio]
+    '8': null
+  ubuntu:
+    '*': [python3-nest-asyncio]
+    focal: null
 python3-netcdf4:
   arch: [python-netcdf4]
   debian: [python3-netcdf4]
