autoware_lanelet2_extension: 0.4.0-1 in 'rolling/distribution.yaml' [bloom]

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -574,6 +574,14 @@ repositories:
       version: main
     status: developed
   autoware_lanelet2_extension:
+    release:
+      packages:
+      - autoware_lanelet2_extension
+      - autoware_lanelet2_extension_python
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/autoware_lanelet2_extension-release.git
+      version: 0.4.0-1
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_lanelet2_extension.git
