bond_core: 4.1.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -776,12 +776,12 @@ repositories:
       - bond
       - bond_core
       - bondcpp
+      - bondpy
       - smclib
-      - test_bond
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/bond_core-release.git
-      version: 4.0.0-5
+      version: 4.1.0-1
     source:
       test_pull_requests: true
       type: git
