--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7238,6 +7238,15 @@ repositories:
       type: git
       url: https://github.com/SICKAG/sick_scan_xd.git
       version: develop
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/sick_scan_xd-release.git
+      version: 3.4.0-1
+    source:
+      type: git
+      url: https://github.com/SICKAG/sick_scan_xd.git
+      version: develop
     status: developed
   simple_actions:
     doc:
