--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7190,6 +7190,12 @@ repositories:
       url: https://github.com/SICKAG/sick_safevisionary_ros2.git
       version: main
     status: developed
+  sick_scan_xd:
+    doc:
+      type: git
+      url: https://github.com/SICKAG/sick_scan_xd.git
+      version: master
+    status: developed
   simple_actions:
     doc:
       type: git
