Enable test_pull_requests for tracetools_analysis on Jazzy
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7807,6 +7807,7 @@ repositories:
       url: https://github.com/ros2-gbp/tracetools_analysis-release.git
       version: 3.0.0-6
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-tracing/tracetools_analysis.git
       version: jazzy
