Enable test_pull_requests for tracetools_analysis on Rolling (#41809)
Signed-off-by: Christophe Bedard <christophe.bedard@apex.ai>

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7637,6 +7637,7 @@ repositories:
       url: https://github.com/ros2-gbp/tracetools_analysis-release.git
       version: 3.1.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-tracing/tracetools_analysis.git
       version: rolling
