Added camera_aravis2 as new repository to humble, iron, and jazzy

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -919,6 +919,22 @@ repositories:
       url: https://github.com/tesseract-robotics/boost_plugin_loader.git
       version: main
     status: developed
+  camera_aravis2:
+    doc:
+      type: git
+      url: https://github.com/FraunhoferIOSB/camera_aravis2.git
+      version: main
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/FraunhoferIOSB/camera_aravis2-release.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/FraunhoferIOSB/camera_aravis2.git
+      version: main
+    status: maintained
   camera_ros:
     release:
       tags:
