Added packages to release for camera_aravis2

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -710,6 +710,9 @@ repositories:
       url: https://github.com/FraunhoferIOSB/camera_aravis2.git
       version: main
     release:
+      packages:
+      - camera_aravis2
+      - camera_aravis2_msgs
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/FraunhoferIOSB/camera_aravis2-release.git
