--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -925,6 +925,9 @@ repositories:
       url: https://github.com/FraunhoferIOSB/camera_aravis2.git
       version: main
     release:
+      packages:
+      - camera_aravis2
+      - camera_aravis2_msgs
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/FraunhoferIOSB/camera_aravis2-release.git
