--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -814,6 +814,9 @@ repositories:
       url: https://github.com/FraunhoferIOSB/camera_aravis2.git
       version: main
     release:
+      packages:
+      - camera_aravis2
+      - camera_aravis2_msgs
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/FraunhoferIOSB/camera_aravis2-release.git
