Use the right branch on geometry_tutorials (#41871)
Signed-off-by: Alejandro Hernández Cordero <ahcorde@gmail.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2669,7 +2669,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: humble
     release:
       packages:
       - geometry_tutorials
@@ -2682,7 +2682,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: humble
     status: developed
   google_benchmark_vendor:
     doc:
