--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1994,7 +1994,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: iron
     release:
       packages:
       - geometry_tutorials
@@ -2007,7 +2007,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: iron
     status: developed
   google_benchmark_vendor:
     doc:
