--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2014,7 +2014,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: jazzy
     release:
       packages:
       - geometry_tutorials
@@ -2027,7 +2027,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: jazzy
     status: developed
   google_benchmark_vendor:
     doc:
