--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1948,7 +1948,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: rolling
     release:
       packages:
       - geometry_tutorials
@@ -1961,7 +1961,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros/geometry_tutorials.git
-      version: ros2
+      version: rolling
     status: developed
   google_benchmark_vendor:
     doc:
