flex_sync: 2.0.0-1 in 'jazzy/distribution.yaml' [bloom] (#41880)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1713,6 +1713,11 @@ repositories:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
       version: release
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/flex_sync-release.git
+      version: 2.0.0-1
     source:
       type: git
       url: https://github.com/ros-misc-utilities/flex_sync.git
