Add python3-pytest-xvfb Dependency to ROSDEP (#41947)
* Update python.yaml

* Update python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8489,6 +8489,17 @@ python3-pytest-xdist:
     "*": [python3-pytest-xdist]
     "7": ['python%{python3_pkgversion}-pytest-xdist']
   ubuntu: [python3-pytest-xdist]
+python3-pytest-xvfb:
+  arch: [python-pytest-xvfb]
+  debian: [python3-pytest-xvfb]
+  fedora: [python3-pytest-xvfb]
+  gentoo: [dev-python/pytest-xvfb]
+  nixos: [python312Packages.pytest-xvfb]
+  opensuse: [python3-pytest-xvfb]
+  rhel:
+    pip:
+      packages: [pytest-xvfb]
+  ubuntu: [python3-pytest-xvfb]
 python3-pytorch-pip: *migrate_eol_2025_04_30_python3_pytorch_pip
 python3-pytrinamic-pip:
   debian:
