Add nicla_vision_ros2 to rosdistro (#41486)
* readding

* fix alphabet

* fix alphabet jazzy

* fix identation

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5019,6 +5019,16 @@ repositories:
       type: git
       url: https://github.com/astuff/network_interface.git
       version: ros2_master
+  nicla_vision_ros2:
+    doc:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: humble
+    status: developed
   nlohmann_json_schema_validator_vendor:
     doc:
       type: git
