--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4038,6 +4038,16 @@ repositories:
       url: https://github.com/brow1633/network_bridge.git
       version: main
     status: maintained
+  nicla_vision_ros2:
+    doc:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
+      version: jazzy
+    status: developed
   nlohmann_json_schema_validator_vendor:
     doc:
       type: git
