feat: add portaudio2

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7478,6 +7478,9 @@ portaudio:
   nixos: [portaudio]
   openembedded: [portaudio-v19@meta-oe]
   ubuntu: [libportaudio-dev]
+portaudio2:
+  debian: [libportaudio2]
+  ubuntu: [libportaudio2]
 portaudio19-dev:
   debian: [portaudio19-dev]
   fedora: [portaudio-devel]
