classic_bags: 0.4.0-1 in 'rolling/distribution.yaml' [bloom] (#42077)
* classic_bags: 0.4.0-1 in 'rolling/distribution.yaml' [bloom]

* Test pull requests=true

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -893,8 +893,9 @@ repositories:
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/classic_bags-release.git
-      version: 0.1.0-2
+      version: 0.4.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
       version: main
