Add `source` entry for ros2_openai_server (jazzy) (#42014)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5902,6 +5902,16 @@ repositories:
       url: https://github.com/ros2/rmw_implementation.git
       version: jazzy
     status: developed
+  robosoft_openai:
+    doc:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: jazzy
+    status: developed
   robot_calibration:
     doc:
       type: git
