Add `source` entry for ros2_openai_server (humble) (#42013)
* Add initial `source` entry for ros2_openai_server (humble)

* Update package name

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7299,6 +7299,16 @@ repositories:
       url: https://github.com/ros2/rmw_implementation.git
       version: humble
     status: developed
+  robosoft_openai:
+    doc:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: humble
+    status: developed
   robot_calibration:
     doc:
       type: git
